# dswa-cwc-hs

./: .gitignore  Dockerfile  dswa-cwc-hs.cabal  sample-project.cabal  stack.yaml
app/: AesonBson.hs  Main.hs
src/: Main.hs
web/: elm-package.json  package.json
web/src/: Login.elm  LoginStyle.elm  Playground.elm  index.html
