name: dswa-cwc-hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: bijoyjth@gmail.com
homepage: https://github.com/githubuser/sample-project#readme
category: Web
author: Author name here
extra-source-files:
    README.md
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable dswa-cwc-hs
  hs-source-dirs: app
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      time -any,
      scotty,
      wai-middleware-static,
      aeson
  default-language: Haskell2010
