name: dswa-cwc-hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: bijoyjth@gmail.com
homepage: https://github.com/githubuser/sample-project#readme
category: Web
author: Author name here
extra-source-files:
    README.md
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable dswa-cwc-hs
  hs-source-dirs: app
  main-is: Main.hs
  buildable: True
  build-depends:
      base (>=4.3 && <5.0),
      time -any,
      mongoDB (>= 2.3.0 && <= 2.3.0),
      mtl (>= 2.2.1 && <= 2.2.1),
      scotty,
      wai-middleware-static,
      aeson,
      text,
      unordered-containers,
      scientific,
      vector,
      bytestring,
      bson,
      base64-bytestring,
      data-default-class,
      uuid,
      split,
      attoparsec
  default-language: Haskell2010
